# 3d-ascii-graphics-engine

./: Cargo.toml  README.md
src/: app.rs  camera.rs  main.rs  model.rs  render.rs
src/graphics/: mod.rs  pipeline.rs  rasterizer.rs  scene.rs
