[package]
name = "simple-3d-render-std"
version = "0.1.0"
authors = ["Hidan0 <48904232+Hidan0@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.18.0"
